<resources>
    <string name="app_name">Entec Indoor Navigation</string>
    <string name="scan_message">Scan</string>
    <string name="stop_scan_message">Stop scanning</string>
    <string name="beacon1">Beacon 11 RSSI (dBm):</string>
    <string name="beacon2">Beacon 12 RSSI (dBm):</string>
    <string name="beacon3">Beacon 21 RSSI (dBm):</string>
    <string name="beacon4">Beacon 22 RSSI (dBm):</string>
    <string name="beacon5">Beacon 31 RSSI (dBm):</string>
    <string name="beacon6">Beacon 32 RSSI (dBm):</string>
    <string name="undetermined">Undetermined</string>
    <string name="not_detected">Not detected</string>
    <string name="not_measured">-</string>
    <string name="no_accelerometer">No accelerometer found</string>
    <string name="no_magnetometer">No magnetometer found</string>
    <string name="no_gyroscope">No gyroscope found</string>
    <string name="acceleration_x">Acceleration X (m/s\u00B2):</string>
    <string name="acceleration_y">Acceleration Y (m/s\u00B2):</string>
    <string name="acceleration_z">Acceleration Z (m/s\u00B2):</string>
    <string name="rotation_x">Rotation X (rad/s):</string>
    <string name="rotation_y">Rotation Y (rad/s):</string>
    <string name="rotation_z">Rotation Z (rad/s):</string>
    <string name="magnetic_field_x">Geomagnetic field X (\u00B5T):</string>
    <string name="magnetic_field_y">Geomagnetic field Y (\u00B5T):</string>
    <string name="magnetic_field_z">Geomagnetic field Z (\u00B5T):</string>
    <string name="calculated_position">Position:</string>
    <string name="calculated_room">Room:</string>
    <string name="action_settings">Debug</string>
    <string name="title_activity_main">Entec Indoor Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mdc">Miami Dade College - North Campus</string>
    <string name="mdc_subtitle">Science Complex</string>
    <string name="greeting_text"><![CDATA[Welcome to the School of Engineering\n and Technology!]]></string>
    <string name="greeting_text2"><![CDATA[Room: 1256\nMiami Dade College - North Campus\n11380 NW 27th Avenue Miami, FL 33167\nDept. Phone: (305)-237-1220\nDept. Fax: (305) 237-1531 ]]></string>
    <string name="title_navigation">Entec Indoor Navigation</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_debug">Debug Information</string>
    <string name="title_share">Share</string>
    <string name="title_send">Send</string>
</resources>
